I like this one I think

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ pcap = "2.0.0"
 reqwest = { version = "0.12.4", features = ["blocking"] }
 threadpool = "1.8"
 pnet = "0.35.0"
+webbrowser = "1.0.1"
